cmake_minimum_required(VERSION 2.8.3)
project(image_exposure_msgs)
find_package(catkin REQUIRED COMPONENTS statistics_msgs message_generation)
add_message_files(DIRECTORY msg FILES ExposureSequence.msg ImageExposureStatistics.msg SequenceExposureStatistics.msg)
generate_messages(DEPENDENCIES statistics_msgs)
catkin_package(CATKIN_DEPENDS statistics_msgs message_runtime)
