<?xml version="1.0"?>
<package>
  <name>image_exposure_msgs</name>
  <version>0.0.0</version>
  <description>The image_exposure_msgs package</description>
  <maintainer email="chadrockey@gmail.com">Chad Rockey</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>statistics_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>statistics_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
