<?xml version="1.0"?>
<package>
  <name>wfov_camera_msgs</name>
  <version>0.0.0</version>
  <description>The wfov_camera_msgs package</description>
  <maintainer email="chadrockey@gmail.com">Chad Rockey</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
